# embind-lab

./: .gitignore  CMakeLists.txt  README.md  bindings.cc
app/: index.html  package-lock.json  vite.config.ts
app/src/: main.ts
cpp_app/: car_wash.cc  car_wash.h
